--- a/CodersAcademy.API/CodersAcademy.API/Properties/launchSettings.json
+++ b/CodersAcademy.API/CodersAcademy.API/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56737",
-      "sslPort": 44363
+      "applicationUrl": "http://localhost:57178",
+      "sslPort": 44358
     }
   },
   "profiles": {
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "CodersAcademy": {
+    "CodersAcademy.API": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
